<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_defaults"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="edu.wcu.cs.catamountcharacters.Screen2">

    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:textAllCaps="true"/>

    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/main_menu"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        style="@style/button_style1"
        android:text="@string/scr2_btn1"
        android:id="@+id/scr2_btn1"
        />
    <Button
        style="@style/button_style1"
        android:text="@string/scr2_btn2"
        android:id="@+id/scr2_btn2"
        />
    <Button
        style="@style/button_style1"
        android:text="@string/scr2_btn3"
        android:id="@+id/scr2_btn3"
        />
    <Button
        style="@style/button_style1"
        android:text="@string/scr2_btn4"
        android:id="@+id/scr2_btn4"
        />


</LinearLayout>
