<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_defaults"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical"
    android:weightSum="15"
    tools:context="edu.wcu.cs.catamountcharacters.Screen8">

    <TextView
        style="@style/txt_view"
        android:layout_weight="2"
        android:text="@string/scr8_title"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center_horizontal|center_vertical"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:contentDescription="@string/my_photo"
        android:background="@drawable/gj"/>
    <TextView
        style="@style/txt_view"
        android:layout_weight=".5"
        android:gravity="center_vertical"
        />
    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/scr8_dvlped_by"
        android:gravity="center_vertical"
        />
    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/scr8_my_name"
        android:gravity="center_vertical"
        />

    <TextView
        style="@style/txt_view"
        android:layout_weight=".5"
        android:gravity="center_vertical"
        />
    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/email"
        android:gravity="center_vertical"
        />
    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/email_id"
        android:gravity="center_vertical"
        />

    <TextView
        style="@style/txt_view"
        android:layout_weight=".5"
        android:gravity="center_vertical"
        />
    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/website"
        android:gravity="center_vertical"
        />
    <TextView
        style="@style/txt_view"
        android:layout_weight="1"
        android:text="@string/my_website"
        android:gravity="center_vertical"
        />
</LinearLayout>
